--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 
-.logo {
+.icon {
   animation: logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
 }
 
@@ -15,12 +15,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
 }
 
+.links {
+  display: flex;
+  gap: calc(2px + 1vmin);
+  font-size: calc(4px + 2vmin);
+}
+
 .link {
-  color: #b318f0;
+  color: #4169E1;
 }
 
 @keyframes logo-spin {
